# miyuki-renderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  Misc.md  Miyuki.sln  README.md  bench_test.hpp  default.json  notes.md
Miyuki/: AABB.cc  AABB.h  Accel.cc  Accel.h  Camera.cc  Camera.h  CoreCL.cc  CoreCL.h  Distribution1D.cc  Distribution1D.h  Float4.h  ImageFilter.cc  ImageFilter.h  Integrator.h  Intersection.cc  Intersection.h  KDTree.cc  KDTree.h  Logger.cc  Logger.h  MainWindow.cc  MainWindow.ui  Material.cc  Material.h  Miyuki.h  Miyuki.vcxproj  Miyuki.vcxproj.filters  Octree.h  PathTracer.cc  PathTracer.h  PhotonMap.cc  PhotonMap.h  Primitive.cc  Primitive.h  Ray.h  Render.cc  RenderView.cc  RenderView.h  Scene.cc  Scene.h  (+5 more)
Miyuki-GUI/: MainWindow.cc  MainWindow.h  MainWindow.ui  Miyuki-GUI.vcxproj  Miyuki-GUI.vcxproj.filters  Render.cc  Render.h  RenderView.h  WindowLogger.h
Miyuki-GUI/GeneratedFiles/: qrc_MainWindow.cpp  ui_MainWindow.h
Miyuki-GUI/scripts/: filter.py
Miyuki-old/: Miyuki.sln
Miyuki-old/Miyuki/: AABB.h  Accel.cc  Accel.h  ImageFilter.h  Intersection.h  KDTree.h  Logger.cc  MainWindow.h  Material.h  Miyuki.h  Miyuki.vcxproj  Miyuki.vcxproj.filters  Octree.cc  PathTracer.cc  PathTracer.h  Primitive.h  Render.h  Sampler.cc  Sampler.h  Scene.cc  XMLReader.h  format.cc  mlt.cc  mlt.h  posix.cc  sppm.cc  sppm.h  util.h  vec.h
Miyuki-old/Miyuki-GUI/: MainWindow.cc  MainWindow.ui  Miyuki-GUI.vcxproj  Miyuki-GUI.vcxproj.filters  MiyukiGUI.h  Render.cc  RenderView.cc  WindowLogger.cc  main.cc
Miyuki/GeneratedFiles/: ui_MainWindow.h
Miyuki/kernel/: bxdf.h  trace.h
cmake/: cmake-embree
core/: Film.cc  Film.h  distribution.cc  distribution.h  geometry.cc  geometry.h  integrator.h  interaction.cc  interaction.h  intersection.cc  intersection.h  light.cc  light.h  material.cc  material.h  materialfactory.cc  materialfactory.h  memory.cc  memory.h  mesh.cc  mesh.h  microfacet.h  miyuki-gui.cc  miyuki.cc  primitive.h  ray.cc  ray.h  reflection.cc  reflection.h  rendersystem.cc  rendersystem.hpp  sampler.h  scene.cc  scene.h  spectrum.cc  spectrum.h  texture.cc  texture.h  transform.cc  transform.h  (+2 more)
data/CornellBox/: scene.json
data/breakfast_room/: breakfast_room.mtl  scene.json
data/fireplace_room/: fireplace_room.mtl  scene.json  scene2.json  test.json
data/living_room/: living_room.mtl  scene.json  scene2.json
data/plane/: scene.json  test-guiding.mtl
data/room/: difficult.mtl  scene.json
data/wallpaper/: icon.mtl  scene.json
doc/: doc.md
include/fmt/: format.h  posix.cc
include/imgui/: imgui_internal.h
include/lodepng/: lodepng.cpp
include/math/: sampling.h  spectrum.h  transform.h  vec.hpp
include/miyuki/: miyuki.h  reflection.h  trait.hpp
include/miyuki.foundation/: algorithm.hpp  arena.hpp  array.hpp  defs.h  distribution.h  film.h  image.hpp  imageloader.h  log.hpp  math.hpp  mpsc.hpp  noncopyable.hpp  parallel.h  profiler.h  spectrum.h  task.hpp
include/miyuki.math/: math.hpp
include/miyuki.renderer/: accelerator.h  atmoicfloat.hpp  bidir.hpp  bsdf.h  camera.h  compilable.h  denoiser.h  editable.hpp  fresnel.h  funcs.h  graph.h  integrator.h  interfaces.h  light.h  lightdistribution.h  material.h  mesh-importer.h  mesh.h  mixbsdf-template.hpp  progressreporter.h  ray.h  sampler.h  sampling.h  scene.h  scenegraph.h  shader.h  shadersources.h  shape.h  spectrum.h  stat.hpp  trignometry.hpp
include/miyuki.serialize/: reflection-visitor.hpp  serialize-fwd.hpp  serialize.hpp
include/rand48/: erand48.h
include/tiny_obj_loader/: tiny_obj_loader.cc
integrator/: ao.cc  ao.h  bdpt.cc  bdpt.h  pathtracer.cc  pathtracer.h  pssmlt.cc  pssmlt.h
lib/fmt/: format.cc
material/: matte.cc  matte.h
models/: cornell_box.mtl
sampler/: random.cc  random.h  stratified.cc  stratified.h
scripts/: add_license.py  class_generator.py  file_to_literal.py  gen_include.py  gen_kernel.py  gen_trait.py
shaders/: trignometry.glsl
src/: compilable.cpp  miyuki.h
src/api/: accelerator.h  algorithm.hpp  bsdf.h  camera.h  containers.hpp  defs.h  entity.hpp  film.h  fresnel.h  graph.h  image.hpp  imageloader.h  integrator.h  interfaces.h  light.h  log.hpp  material.h  math.hpp  mesh-importer.h  mesh.h  noncopyable.hpp  object.hpp  parallel.h  primitive.h  property.hpp  ray.h  reflection-visitor.hpp  rng.h  sampler.h  sampling.h  scene.h  serializable.hpp  serialize.hpp  shader.h  shape.h  spectrum.h  trignometry.hpp
src/bidir/: mutation.h  vertex.cc  vertex.h
src/bsdfs/: bsdf.cc  bsdf.h  bsdffactory.cc  bsdffactory.h  fresnel.cc  fresnel.h  lambertian.cc  lambertian.h  microfacet.cc  microfacet.h  mixed.cc  mixed.h  oren-nayar.cc  oren-nayar.h  specular.cc  specular.h  toon.cc  toon.h
src/cameras/: camera.cc  camera.h
src/core/: binarymesh.cc  core.cpp  embreescene.cc  embreescene.h  export.cpp  export.h  film.cc  film.cpp  film.h  geometry.cc  geometry.h  graph.cpp  graphcompiler.cc  imageloader.cpp  intersection.cc  intersection.h  kernelrecord.cc  memory.cc  memory.h  mesh.cc  mesh.cpp  mesh.h  parallel.cpp  parameter.cc  parameter.h  profile.cc  profile.h  progress.cc  progress.h  ray.cc  ray.cpp  ray.h  reflection.cc  rendercontext.h  scatteringevent.cc  scatteringevent.h  scene.cc  scene.cpp  scene.h  serialize.cpp  (+8 more)
src/denoiser/: bilateral.hpp  denoiser.cc  denoiser.h  nlm.cc  nlm.h
src/editor/: editor.cc  editor.h  gui.h
src/engine/: renderengine.cc
src/filters/: filter.cc  filter.h
src/foundation/: film.cpp  image.cpp  imageloader.cpp  parallel.cpp
src/graph/: graph.cc  graphdetail.cc  graphnode.cc  leaf.cc  visitor.cc
src/hw/: gltexture.cc  hwshader.cc  hwtexture.cc  vbo.cc
src/integrators/: direct.hpp  integrator.cc  integrator.h  metropolis.cc  metropolis.h  pathtracer.hpp  rendersession.hpp
src/io/: binaryio.cc  image.cc  image.h  imageloader.cc  importobj.cc  io.cc  io.h  resourcemanager.cc  serialize.cc  serialize.h  xmlparser.cpp
tests/: test-adt.cpp  test-sdtree.cpp
unittest/: test_interaction.cc  test_transform.cc  transform_test.cc  unittest.cc
(+439 files in other folders)
